apps/base/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server
  namespace: apps
  annotations:
    # Annotations for Homepage Service Discovery
    gethomepage.dev/enabled: "false"
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/name: "Prometheus"
    gethomepage.dev/icon: "prometheus.png"
    gethomepage.dev/description: "Time-series database"
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
